# nestcli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: addr2line.rs  main.rs  socket.rs
src/commands/: bundle.rs  conn.rs  debug.rs  mod.rs
src/config/: app.rs  bundle.rs  mod.rs
src/models/: bundle.rs  mod.rs  socket.rs
src/prompts/: bundle.rs  mod.rs
src/services/: bundle.rs  mod.rs
