[package]
name = "nestcli"
version = "0.4.0"
edition = "2024"
authors = ["TurtleP"]
license = "MIT"
description = "A simple CLI tool for LÖVE Potion games."
readme = "README.md"
homepage = "https://github.com/TurtleP/nestdbg"
repository = "https://github.com/TurtleP/nestdbg"
keywords = ["cli", "debug"]
categories = ["command-line-utilities"]

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
clearscreen = "3.0.0"
ctrlc = "3.5.1"
directories = "6.0.0"
indicatif = "0.18.3"
inquire = "0.9.3"
opener = { version = "0.7.2", features = ["reveal"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
toml = "0.8.23"
walkdir = "2.5.0"
which = "7.0.3"
zip = "6.0.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
